--- a/flexaeadv1/README
+++ b/flexaeadv1/README
@@ -1,1 +1,2 @@
-This folder contains the v1 of the flexaead cipher. This is the original version sent to NIST LWC contest. It is kept by historical reasons.
+This folder contains the v1 of the flexaead cipher. This is the original version sent to NIST LWC contest. 
+It is kept by historical reasons.
